k8s/db/mysql-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: 400Mi
            cpu: 0.5
        livenessProbe:
            tcpSocket:
                port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
        readinessProbe:
            tcpSocket:
                port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
