k8s/db/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: db-ns
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
